Added symmetry trap paper to dissertation.

--- a/Jensen-Lit-Review.tex
+++ b/Jensen-Lit-Review.tex
@@ -83,6 +83,7 @@
 \include{src/1-Intro/ch1-lit_review.tex}
 \include{src/2-aims/2-aims.tex}
 \include{src/JTML/chX-jtml}
+\include{src/SymTrap/sym_trap_paper}
 
 %\chapter{EXAMPLES OF EDITOR/Author TOOLS, TABLES, AND IMAGES}% Notice that we can use chapter/section etc breaks in the master file if we want, and then use \input instead of \include to avoid unneccessary page breaks.
 %\input{editorAndAuthorRemarks}%     Stuff about using editorRemark and authorRemark commands
