--- a/ufdissertation.cls
+++ b/ufdissertation.cls
@@ -164,8 +164,9 @@
 %%% They want Times New Roman, or Arial. 
 %%% Times New Roman is loaded by default, uncomment the \renewcommand below to switch it to Arial.
 
-\RequirePackage{mathptmx}%  This is required to load and convert to times new roman
-\RequirePackage{helvet}%    This is required to load Arial Font
+\usepackage{mlmodern}
+% \RequirePackage{mathptmx}%  This is required to load and convert to times new roman
+%\RequirePackage{helvet}%    This is required to load Arial Font
 %\renewcommand{\familydefault}{\sfdefault}% Converts default to actual Arial
 
 \raggedright%               They want a ragged right edge.
